// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mergeDuplicates (snapshots) > case basic > basic 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: green;
  }
}

@theme {
  --theme-var: var(--color-red);
}

@media (max-width: 768px) {
  .test {
    color: yellow;
  }
}"
`;

exports[`mergeDuplicates (snapshots) > case comma-separated > comma-separated 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn,
  .icon-btn {
    color: green;
    padding: 8px;
  }
}"
`;

exports[`mergeDuplicates (snapshots) > case dark-variants > dark-variants 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: yellow;
  }
  .dark .btn {
    color: purple;
  }
}"
`;

exports[`mergeDuplicates (snapshots) > case nested-selectors > nested-selectors 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: green;
    background-color: blue;
    border: 1px solid red;
    &:focus-visible {
      outline: 2px solid red;
    }
    &:active {
      transform: translate(-2px, -2px);
    }
    &:hover {
      transform: scale(0.99);
    }
  }
}"
`;

exports[`onlyKeepAppliedThemeClasses (snapshots) > case basic > basic 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: red;
  }
  .modern .btn {
    color: green;
  }
}

@theme {
  --theme-var: var(--color-red);
}

@media (max-width: 768px) {
  .test {
    color: yellow;
  }
}"
`;

exports[`onlyKeepAppliedThemeClasses (snapshots) > case comma-separated > comma-separated 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn,
  .icon-btn {
    color: red;
    padding: 8px;
  }
  .modern .btn,
  .modern .icon-btn {
    color: green;
  }
}"
`;

exports[`onlyKeepAppliedThemeClasses (snapshots) > case dark-variants > dark-variants 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: red;
  }
  .modern .btn {
    color: yellow;
  }
  .modern.dark .btn {
    color: pink;
  }
  .dark.modern .btn {
    color: purple;
  }
}"
`;

exports[`onlyKeepAppliedThemeClasses (snapshots) > case nested-selectors > nested-selectors 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: red;
    background-color: blue;
    &:focus-visible {
      outline: 2px solid red;
    }
    &:active {
      transform: translate(2px, 2px);
    }
  }
  .modern .btn {
    color: green;
    border: 1px solid red;
    &:hover {
      transform: scale(0.99);
    }
    &:active {
      transform: translate(-2px, -2px);
    }
  }
}"
`;

exports[`removeThemePreludes (snapshots) > case basic > basic 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: red;
  }
  .btn {
    color: green;
  }
}

@theme {
  --theme-var: var(--color-red);
}

@media (max-width: 768px) {
  .test {
    color: yellow;
  }
}"
`;

exports[`removeThemePreludes (snapshots) > case comma-separated > comma-separated 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn,
  .icon-btn {
    color: red;
    padding: 8px;
  }
  .btn,
  .icon-btn {
    color: green;
  }
}"
`;

exports[`removeThemePreludes (snapshots) > case dark-variants > dark-variants 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: red;
  }
  .btn {
    color: yellow;
  }
  .dark .btn {
    color: pink;
  }
  .dark .btn {
    color: purple;
  }
}"
`;

exports[`removeThemePreludes (snapshots) > case nested-selectors > nested-selectors 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: red;
    background-color: blue;
    &:focus-visible {
      outline: 2px solid red;
    }
    &:active {
      transform: translate(2px, 2px);
    }
  }
  .btn {
    color: green;
    border: 1px solid red;
    &:hover {
      transform: scale(0.99);
    }
    &:active {
      transform: translate(-2px, -2px);
    }
  }
}"
`;
